fix/search-card-grids-don't-stretch-2-cards

--- a/src/component-library/site-components/CardGrid/CardGrid.module.scss
+++ b/src/component-library/site-components/CardGrid/CardGrid.module.scss
@@ -18,14 +18,4 @@
       $breakpoint-xl: 4
     );
   }
-
-  &.half {
-    > div {
-      @include responsive-grid-span(
-        $default: 6,
-        $breakpoint-m: 3,
-        $breakpoint-l: 6
-      );
-    }
-  }
 }
